syntax = "proto3";

package bookstore;


option go_package = "bookstore_grpc/proto;proto";

service BookstoreService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc AddBook(AddBookRequest) returns (AddBookResponse);
  rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message AddBookRequest {
  string title = 1;
  string author = 2;
}

message AddBookResponse {
  string message = 1;
}

message ListBooksRequest {}

message Book {
  int32 id = 1;
  string title = 2;
  string author = 3;
}

message ListBooksResponse {
  repeated Book books = 1;
}
